--- a/src/main/webcli/package.json
+++ b/src/main/webcli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@truenewx/tnxweb",
-  "version": "0.1.2",
+  "version": "0.1.0",
   "description": "互联网技术解决方案：Web扩展支持",
   "private": false,
   "publishConfig": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "md5": "^2.2.1",
     "vue": "^2.6.11"
   },
