--- a/src/main/webcli/package.json
+++ b/src/main/webcli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@truenewx/tnxweb",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "互联网技术解决方案：Web扩展支持",
   "private": false,
   "publishConfig": {
@@ -16,8 +16,7 @@
   "license": "Apache License 2.0",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --modern",
-    "lib": "vue-cli-service build --modern --target lib --name tnxweb --dest lib components/index.js"
+    "build": "vue-cli-service build --modern"
   },
   "dependencies": {
     "axios": "^0.19.2",
