添加用对话框打开页面组件的支持

--- a/src/main/webcli/package.json
+++ b/src/main/webcli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@truenewx/tnxweb",
-  "version": "0.2.1",
+  "version": "0.2.5",
   "description": "互联网技术解决方案：Web扩展支持",
   "private": false,
   "publishConfig": {
@@ -48,7 +48,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "eqeqeq": "warn"
     }
   },
   "browserslist": [
