--- a/src/main/webcli/package.json
+++ b/src/main/webcli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@truenewx/tnxweb",
-  "version": "0.4.7",
+  "version": "0.5.2",
   "description": "互联网技术解决方案：Web扩展支持",
   "private": false,
   "publishConfig": {
@@ -21,10 +21,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "jquery": "^3.5.1",
     "md5": "^2.2.1",
-    "vue": "^2.6.11",
-    "element-ui": "^2.13.2"
+    "requirejs": "^2.3.6",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
