--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --modern"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.19.2",
