修复变量未使用错误

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars": "off",
+      "no-unused-vars": "warn",
       "no-undef": "warn",
       "eqeqeq": "warn"
     }
