没必要的转义符检查更改为警告级别

--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
       "parser": "babel-eslint"
     },
     "rules": {
+      "eqeqeq": "warn",
       "no-unused-vars": "warn",
       "no-undef": "warn",
-      "eqeqeq": "warn"
+      "no-useless-escape": "warn"
     }
   },
   "browserslist": [
