--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jquery": "^3.5.1",
     "md5": "^2.3.0",
     "base-64": "^1.0.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.7",
