--- a/package.json
+++ b/package.json
@@ -50,7 +50,13 @@
     },
     "rules": {
       "eqeqeq": "warn",
-      "no-unused-vars": "warn",
+      "no-unused-vars": [
+        "error",
+        {
+          "vars": "local",
+          "args": "none"
+        }
+      ],
       "no-undef": "warn",
       "no-useless-escape": "warn"
     }
