--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@truenewx/tnxweb",
-  "version": "0.6.8",
+  "version": "2.2.0",
   "description": "互联网技术解决方案：Web扩展支持",
   "private": false,
   "publishConfig": {
+    "cache": "~/.npm",
+    "registry": "https://npm.pkg.github.com",
     "access": "public"
   },
   "main": "components/index.js",
@@ -28,12 +30,12 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.7",
-    "@vue/cli-plugin-eslint": "~4.5.7",
-    "@vue/cli-service": "~4.5.7",
+    "@vue/cli-plugin-babel": "~4.5.12",
+    "@vue/cli-plugin-eslint": "~4.5.12",
+    "@vue/cli-service": "~4.5.12",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.11.0",
-    "eslint-plugin-vue": "^7.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
